tests/NormalTests/paczka1/fuzzy1/78628337.err
Error in line 24: S207 S791 73,3
Error in line 19: Kkjt S3 29,1
Error in line 37: Kkjt S791 28,0
Error in line 31: hSUahNEOHP7 S207 28,3
